testing/Travis/testcases/prototype/shouldSucceed/try5a.adl
CONTEXT Try5 IN ENGLISH
  CLASSIFY B ISA BorEorA
  CLASSIFY E ISA BorEorA
  CLASSIFY A ISA BorEorA

PATTERN Try5
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
RELATION u[E*Y]
RULE Try5: r = s;(t/\u)
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This is an attempt to mislead the type checker, by
            choosing a different source and target for t and u.
   Result: PASS
-- Reason: t/\u are in conflict (concepts B and E), but there is an intersection type (concept F, rule r1) to resolve that.
           Now s~ is in conflict with t/\u (A is not F), but there is an intersection type (concept D).
           The mischievous attempt to mislead the type checker is that it must derive that A/\F=D

  Type analysis:
  [X*Y]            s[X*A];t[B*Y]/\u[E*Y]
  [X*A]            ├── s[X*A]
  [A/\B/\E*Y]      └── t[B*Y]/\u[E*Y]
  [B*Y]                ├── t[B*Y]
  [E*Y]                └── u[E*Y]

-}