testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/try17b.adl
CONTEXT Test17b IN ENGLISH

PATTERN Test17b
RELATION r[A*C]
RELATION s[A*D]
RELATION q[B*C]
CLASSIFY X ISA D
CLASSIFY X ISA B
RULE r = s;q
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script is meant to study correct derivation of concept at ;
   Result: FAIL
   Reason:  This requires an intersection type between A and B, which is not there.
            The concept X is not sufficient, as atoms in A/\B may not be in X.
-}